# diff-geom-backend

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh
src/app/: main.py
src/app/api/: curve.py  surface.py
src/app/core/: curvatures.py  first_fundamental_form.py  geometry_curve.py  geometry_surface.py  normals.py  partials.py  second_fundamental_form.py
src/app/core/curves/: elliptic_paraboloid.py  enneper.py  helicoid.py  hyperbolic_paraboloid.py  registry.py  sphere.py  torus.py
src/app/core/surfaces/: elliptic_paraboloid.py  registry.py  sphere.py
src/app/data/: curve_info.py  surface_info.py
src/app/models/: curve_input.py
src/app/schemas/: curve.py  surface.py
src/app/utils/: response_builder.py  response_handler.py
tests/: test_math.py
